z-index error corrects header glitch

--- a/source/assets/stylesheets/components/_header.scss
+++ b/source/assets/stylesheets/components/_header.scss
@@ -8,6 +8,7 @@ header{
   height: 100vh;
   position: fixed;
   top: -100vh;
+  z-index: 50;
   background-color: #16162d;
   border-bottom-right-radius: 100%;
   border-bottom-left-radius: 100%;
@@ -95,27 +96,27 @@ li{
 }
 // hamburger end
 
-// .landing-text{
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   width: 100%;
-//   text-align: center;
-//   z-index: 1;
-// }
+.landing-text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+}
 
-// .landing-text h1{
-//   font-size: 20rem;
-//   font-family: 'Dancing Script', sans-serif;
-//   background: linear-gradient(to top, #ffe838, #fd57bf);
-//   -webkit-background-clip: text;
-//   -webkit-text-fill-color: transparent;
-//   padding: 1rem;
-//   user-select: none;
-// }
+.landing-text h1{
+  font-size: 20rem;
+  font-family: 'Dancing Script', sans-serif;
+  background: linear-gradient(to top, #ffe838, #fd57bf);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  padding: 1rem;
+  user-select: none;
+}
 
-// .landing-text h6{
-//   font-size: 2rem;
-//   font-weight: 300;
-// }
+.landing-text h6{
+  font-size: 2rem;
+  font-weight: 300;
+}
